--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -38,7 +38,7 @@
             android:layout_margin="@dimen/activity_horizontal_margin"
             android:layout_gravity="bottom|end"
             android:visibility="invisible"
-            android:src="@drawable/ic_menu_delete"/>
+            android:src="@drawable/ic_delete_white"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
