--- a/app/src/main/res/layout/list_item_chapter_edit.xml
+++ b/app/src/main/res/layout/list_item_chapter_edit.xml
@@ -81,7 +81,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:src="@drawable/ic_menu_add_custom"/>
+            android:src="@drawable/ic_add_grey"/>
 
     </android.support.v7.widget.CardView>
 
