--- a/app/src/main/res/layout-sw600dp/fragment_recipe_details.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_recipe_details.xml
@@ -123,15 +123,28 @@
                         android:background="@color/grey_300"
                         tools:visibility="visible" />
 
-                    <TextView
-                        android:id="@+id/details_ingredient_title_text"
+                    <FrameLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/list_ingredient_title"
-                        android:gravity="center_horizontal"
-                        android:layout_marginTop="@dimen/activity_vertical_margin"
-                        style="@style/subtitleText"
-                        tools:visibility="visible" />
+                        android:layout_marginTop="@dimen/activity_vertical_margin">
+
+                        <TextView
+                            android:id="@+id/details_ingredient_title_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/list_ingredient_title"
+                            android:gravity="center_horizontal"
+                            style="@style/subtitleText"
+                            tools:visibility="visible" />
+
+                        <ImageView
+                            android:id="@+id/details_shopping_list_button"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="right|end"
+                            android:src="@drawable/ic_add_shopping_cart"/>
+
+                    </FrameLayout>
 
                     <project.hnoct.kitchen.view.NonScrollingRecyclerView
                         android:id="@+id/details_ingredient_recycler_view"
