--- a/app/src/main/res/layout/list_item_recipebook_edit.xml
+++ b/app/src/main/res/layout/list_item_recipebook_edit.xml
@@ -96,7 +96,7 @@
                 android:layout_height="@dimen/touchpad_size"
                 android:padding="@dimen/button_margin_small"
                 android:layout_gravity="end"
-                android:src="@drawable/ic_menu_save"/>
+                android:src="@drawable/ic_menu_save_grey"/>
 
         </FrameLayout>
 
