Update Bundle keys
Bundle keys for information for ActivityRecipeDetails previously used
Strings in the resource file, but was updated to be stored in a public
interface within FragmentRecipeDetails to reflect better standards.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -44,12 +44,12 @@
         android:checked="false"
         android:checkable="true" />
 
-    <!--<item-->
-        <!--android:id="@+id/action_copy_db"-->
-        <!--android:orderInCategory="5"-->
-        <!--android:title="@string/transfer_db_title"-->
-        <!--android:checked="false"-->
-        <!--android:checkable="true" />-->
+    <item
+        android:id="@+id/action_copy_db"
+        android:orderInCategory="5"
+        android:title="@string/transfer_db_title"
+        android:checked="false"
+        android:checkable="true" />
 
     <!--<item-->
         <!--android:id="@+id/action_clear_data"-->
