Update backup and restore process
Previously, backing up didn't backup images used for custom-recipes.
When restore the database, it would point to images that no longer
existed, causing the recipe details to fail to load. Added a process
for backing up/restoring images as well to fix this issue.

--- a/app/src/main/res/layout/dialog_pref_nutrient.xml
+++ b/app/src/main/res/layout/dialog_pref_nutrient.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:custom="project.kitchen.view"
+    xmlns:custom="http://project.kitchen.view"
     android:orientation="vertical"
     android:layout_width="@dimen/pref_dialog_nutrient_width"
     android:layout_height="wrap_content">
